--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,14 @@
 {
+
+
+  "TokenOptions": {
+    "Audience": "www.emir.com",
+    "Issuer": "www.emir.com",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "mysecretkeymysecretkey"
+
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
